10 node NO2 added

--- a/R CODE/masters_thesis_testing_data_model.Rmd
+++ b/R CODE/masters_thesis_testing_data_model.Rmd
@@ -66,11 +66,11 @@ mae.xval.latest  = c()
 
 for (i in 1:6){
 
-response        = c('NO2')
+response        = c('NO2')    # NO, NOX, SO2, PM10, PM2.5
 results         = c()
 
 # get data set fields that I can use in the model. 
-dropIdx               = which(names(df) %in% c(Year, MMYYYY, response, chosenVar)) #chosenVar[length(chosenVar)])) #chosenVar))
+dropIdx               = which(names(df) %in% c('Year', 'MMYYYY', response, chosenVar)) #chosenVar[length(chosenVar)])) #chosenVar))
 dfPredictors          = df[,-dropIdx]
 predictorVariableList = names(dfPredictors)
 #length(predictorVariableList)
@@ -110,7 +110,9 @@ test = -train
     # 
   
     colcount = dim(df.train.hex)[2]
-    nodes_layer1 = ceiling(colcount/2)
+    # nodes_layer1 = ceiling(colcount/2)   # 1
+    #nodes_layer1 = 10
+    nodes_layer1 = 5
     df.train.dl <- h2o.deeplearning(x = 2:colcount, y = 1, training_frame = df.train.hex, validation_frame= df.test.hex, hidden=c(nodes_layer1), 
                                    distribution= "AUTO", variable_importances = TRUE, reproducible = TRUE, seed = 1234, nfolds=10) 
   
@@ -163,227 +165,57 @@ chosenVar
 mae.train.latest
 mae.test.latest
 mae.xval.latest
+# 
+# # remove the last value as that has the higher MAE
+# chosenVar.final        = chosenVar[1:length(chosenVar)-1]
+# mae.train.latest.final = mae.train.latest[1:length(mae.train.latest)-1]
+# mae.test.latest.final  = mae.test.latest[1:length(mae.test.latest)-1]
+# mae.xval.latest.final  = mae.xval.latest[1:length(mae.xval.latest)-1]
+# 
+# # Export the data prediction for the testing and validation data sets
+# outfilePath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","DATASETS","RESULTS", "PREDICTIONS","FORWARD_VAR_PREDICTIONS")
+# dfExportResults = data.frame(chosenVar.final, mae.train.latest.final, mae.test.latest.final, mae.xval.latest.final, 1)
+# dfExportResults
+# 
+# # get min mae.xval predictor inputs
+# dfExportResults2 = dfExportResults %>%
+#   group_by(X1) %>%
+#   summarise(chosenVar.final = toString(chosenVar.final)) %>%
+#   ungroup()
+# 
+# dfExportResults2 = inner_join(dfExportResults, dfExportResults2, by=("X1" = "X1"))
+# dfExportResults2
+# 
+# #dfExportResults2 = dfExportResults2 %>% group_by(X1) %>% filter(row_number(mae.train) == 1)
+# #dfExportResults2 = dfExportResults2 %>% select(j, responseCol.x, predictorVar, mae.train, mae.test, mae.xval)
+# #dfExportResults2 = dfExportResults2[,-1]  # remove the 'j'!!
+# 
+# 
+# 
+# # at this point we have a table of values that we can use, but need to select the one var that minimizes the mae.xval
+# dfExport = dfExportResults2 %>% select(chosenVar.final.y, mae.train.latest.final, mae.test.latest.final, mae.xval.latest.final) %>% slice(which.min(mae.xval.latest.final))
+# 
+# 
+# dfPrior  = read.csv(file.path(outfilePath,"dfExportResultsNO2.csv"),na.strings=c("NA"," "))
+# dfNew    = rbind(dfPrior, dfExport)
+# #dfNew = dfExport
+# write.csv(dfNew, file.path(outfilePath,'dfExportResultsNO2_del.csv')) 
+# 
+# chosenVar
+# mae.xval.latest
+# dfExport
+# 
+# dfPrior
 
-# EXPORT RESULTS TO CSV 
-# NO2 - cross validation with half as many nodes rounded up is:
-# [1] "lag.1.NO2" "MMYYYY"    "lag.2.NO2" "RHUM"     
-# [1] 4.702829 4.410815 3.993891 4.054605
-# [1] 5.128614 4.640433 4.268468 4.326089
-# [1] 4.802746 4.505613 4.128416 4.245010
-
-# Export the data prediction for the testing and validation data sets
-outfilePath = file.path("~/Dropbox","NU","THESIS_MAC","thesis","DATASETS","RESULTS", "PREDICTIONS","FORWARD_VAR_PREDICTIONS")
-dfExportResultsNO2 = data.frame(chosenVar, mae.train.latest, mae.test.latest, mae.xval.latest, 1)
-write.csv(dfExportResultsNO2, file.path(outfilePath,'dfExportResultsNO2.csv')) 
+# new values
+# 	chosenVar.final.y	                                                 mae.train.latest.final	mae.test.latest.final	mae.xval.latest.final
+# 1	lag.1.NO2, lag.2.NO2, X5amTo8amSlope.NOX.IMP, TimeHoursNum, RHUM	3.626987236	3.924647802	3.737961677
 
 
+
+# 1 --> output from model when 1 layer of ceiling(0.5 * input cols) as number of hidden nodes
+# 2 --> output from model when 1 layer of 10 hidden nodes
 ```
-
-
-
-
-
-
-
-<!-- ```{r} -->
-
-<!-- chosenVar             = c() -->
-<!-- dropIdx               = which(names(df) %in% c(response, chosenVar)) -->
-<!-- dfPredictors          = df[,-dropIdx] -->
-<!-- predictorVariableList = names(dfPredictors) -->
-
-
-<!-- createDataFrame = function(df,responseCol,params){ -->
-<!--   dfParamsInclude   = which(names(df) %in% c(params)) -->
-<!--   dfNewParams       = df[,dfParamsInclude] -->
-<!--   dfNewResponseInc  = which(names(df) %in% c(responseCol)) -->
-<!--   dfNewResponse     = df[,dfNewResponseInc] -->
-<!--   dfNew             = cbind(dfNewResponse, dfNewParams) -->
-<!--   colnames(dfNew)[1] = paste0(responseCol) -->
-<!--   return(dfNew) -->
-<!-- } -->
-
-<!-- # get all values in data frame that are remaining...  -->
-<!-- combn = data.frame(combn(predictorVariableList, 1)) -->
-
-
-<!-- # separate data into 70-30 split ***** NOTE I HAVEN'T REMOVE THE 2014 DATA ***** -->
-<!-- set.seed(123) -->
-<!-- smp.size = floor(0.70 * nrow(df)) -->
-<!-- train = sample(seq_len(nrow(df)), size = smp.size) -->
-<!-- test = -train -->
-
-<!-- results = data.frame() -->
-
-
-<!-- for (i in 1:1){ -->
-
-<!--   for (j in 1:dim(combn)[2]){   -->
-
-<!--   # create the data frame -->
-<!--   paramList = as.list(t(combn[j])) -->
-<!--   dfNew = createDataFrame(df, response[i], paramList) -->
-
-<!--   # # rename the df to df.train, df.test, and df.vali respectively -->
-<!--   df.train = dfNew[train,] -->
-<!--   df.test  = dfNew[-train,] -->
-<!--   #  -->
-<!--   # # create h2o-ready frame -->
-<!--   df.train.hex <- as.h2o(df.train) -->
-<!--   df.test.hex <- as.h2o(df.test) -->
-<!--   #  -->
-
-<!--   colcount = dim(df.train.hex)[2] -->
-<!--   df.train.dl <- h2o.deeplearning(x = 2:2, y = 1, training_frame = df.train.hex, validation_frame= df.test.hex, hidden=c(10),  -->
-<!--                                  distribution= "AUTO", variable_importances = TRUE, reproducible = TRUE, seed = 1234, nfolds=10)  -->
-
-<!--   mae.train = h2o.mae(df.train.dl, train = TRUE,  valid = FALSE, xval=FALSE) -->
-<!--   mae.test  = h2o.mae(df.train.dl, train = FALSE, valid = TRUE,  xval=FALSE) -->
-<!--   mae.xval  = h2o.mae(df.train.dl, train = FALSE, valid = FALSE, xval=TRUE) -->
-
-<!--   # next: create the results table which will be a csv file with response, inputVariableName(s), mae train, test, and vali as other columns -->
-<!--   responseCol = response[i] -->
-<!--   inputVarCol = as.character(t(paramList)) -->
-
-<!--   results.temp = data.frame(responseCol, j, inputVarCol, mae.train, mae.test, mae.xval)  # -->
-<!--   results = rbind(results, results.temp) -->
-
-
-<!--   } -->
-
-
-<!-- } -->
-
-
-<!-- x = results %>% -->
-<!--   group_by(responseCol, j) %>% -->
-<!--   summarise(predictorVar = toString(inputVarCol)) %>% -->
-<!--   ungroup() -->
-<!-- x -->
-
-<!-- # next: i need to join back to the 'j' col the output for the mae.train, mae.test, and mae.vali -->
-<!-- y = inner_join(x, results, by=("j" = "j")) -->
-<!-- y = y %>% group_by(j) %>% filter(row_number(mae.train) == 1) -->
-<!-- y = y %>% select(responseCol.x, predictorVar, mae.train, mae.test, mae.xval) -->
-<!-- y = y[,-1] -->
-<!-- y -->
-
-<!-- # at this point we have a table of values that we can use, but need to select the one var that minimizes the mae.xval -->
-<!-- y = y %>% select(responseCol.x, predictorVar, mae.xval) %>% slice(which.min(mae.xval)) -->
-
-<!-- # variable 1 selected for predicting NO2 is lag.1.NO2. No surprises there.  -->
-<!-- #The mae.xval is 4.544425.  -->
-<!-- # next we need to re-run using the lag.1.NO2 as the first input variable.  -->
-
-<!-- chosenVar = append(chosenVar, y$predictorVar) -->
-
-
-<!-- ``` -->
-
-<!-- # variable 1 selected for predicting NO2 is lag.1.NO2. No surprises there. The mae.xval is 4.544425.  -->
-<!-- # next we need to re-run using the lag.1.NO2 as the first input variable.  -->
-<!-- # VARIABLE NUMBER 1: -->
-<!-- # responseCol.x = NO2 -->
-<!-- # predictorVar  = lag.1.NO2 -->
-<!-- # mae.xval    = 4.544425	 -->
-
-
-<!-- # VARIABLE NUMBER 2 = ? -->
-<!-- ```{r} -->
-
-
-<!-- # get data set fields that I can use in the model.  -->
-<!-- dropIdx               = which(names(df) %in% c(response, chosenVar)) -->
-<!-- dfPredictors          = df[,-dropIdx] -->
-<!-- predictorVariableList = names(dfPredictors) -->
-
-<!-- # get all values in data frame that are remaining...  -->
-<!-- combn = data.frame(combn(predictorVariableList, 1)) -->
-<!-- #paramList = append(chosenVar, as.list(t(combn[1]))) -->
-
-
-<!-- set.seed(123) -->
-<!-- smp.size = floor(0.70 * nrow(df)) -->
-<!-- train = sample(seq_len(nrow(df)), size = smp.size) -->
-<!-- test = -train -->
-
-<!-- results = c() -->
-<!-- # chosenVar = as.vector(chosenVar) -->
-
-<!-- for (i in 1:1){ -->
-
-<!--   for (j in 1:dim(combn)[2]){   -->
-
-<!--   # create the data frame -->
-<!--   #paramList = as.list(t(combn[j]))    # for this next loop we need to add chosenVar's + 1 from each combn -->
-<!--   paramList = append(chosenVar, as.list(t(combn[j]))) -->
-<!--   dfNew = createDataFrame(df, response[i], paramList) -->
-
-<!--   # # rename the df to df.train, df.test, and df.vali respectively -->
-<!--   df.train = dfNew[train,] -->
-<!--   df.test  = dfNew[-train,] -->
-<!--   #  -->
-<!--   # # create h2o-ready frame -->
-<!--   df.train.hex <- as.h2o(df.train) -->
-<!--   df.test.hex <- as.h2o(df.test) -->
-<!--   #  -->
-
-<!--   colcount = dim(df.train.hex)[2] -->
-<!--   df.train.dl <- h2o.deeplearning(x = 2:colcount, y = 1, training_frame = df.train.hex, validation_frame= df.test.hex, hidden=c(10),  -->
-<!--                                  distribution= "AUTO", variable_importances = TRUE, reproducible = TRUE, seed = 1234, nfolds=10)  -->
-
-<!--   mae.train = h2o.mae(df.train.dl, train = TRUE,  valid = FALSE, xval=FALSE) -->
-<!--   mae.test  = h2o.mae(df.train.dl, train = FALSE, valid = TRUE,  xval=FALSE) -->
-<!--   mae.xval  = h2o.mae(df.train.dl, train = FALSE, valid = FALSE, xval=TRUE) -->
-
-<!--   # next: create the results table which will be a csv file with response, inputVariableName(s), mae train, test, and vali as other columns -->
-<!--   responseCol = response[i] -->
-<!--   inputVarCol = as.character(t(paramList)) -->
-
-<!--   results.temp = data.frame(responseCol, j, inputVarCol, mae.train, mae.test, mae.xval)  # -->
-<!--   results = rbind(results, results.temp) -->
-
-
-<!--   } -->
-
-
-<!-- } -->
-
-<!-- # note - had to re-do results since the adding of results to the last results table doesnt work for the 'toString' section. -->
-<!-- #results = results[129:382,] -->
-<!-- x = results %>% -->
-<!--   group_by(responseCol, j) %>% -->
-<!--   summarise(predictorVar = toString(inputVarCol)) %>% -->
-<!--   ungroup() -->
-<!-- x -->
-
-<!-- # next: i need to join back to the 'j' col the output for the mae.train, mae.test, and mae.vali -->
-<!-- y = inner_join(x, results, by=("j" = "j")) -->
-<!-- y = y %>% group_by(j) %>% filter(row_number(mae.train) == 1) -->
-<!-- y = y %>% select(responseCol.x, predictorVar, mae.train, mae.test, mae.xval) -->
-<!-- y = y[,-1]  # remove the 'j'!! -->
-<!-- y -->
-
-<!-- # at this point we have a table of values that we can use, but need to select the one var that minimizes the mae.xval -->
-<!-- y = y %>% select(responseCol.x, predictorVar, mae.xval) %>% slice(which.min(mae.xval)) -->
-<!-- y -->
-
-<!-- # variable 1 selected for predicting NO2 is lag.1.NO2. No surprises there. The mae.xval is 4.544425.  -->
-<!-- # variable 2 selected for predicting NO2 is the lag.1.SOLR.                The mae.xval is 4.360116. -->
-<!-- chosenVar = as.vector(y$predictorVar) -->
-<!-- # chosenVar = c("lag.1.NO2", "lag.1.SOLR")  # had to add manually here as lost Rstudio for temp while -->
-
-<!-- # not right here, but need to make a check here at a future point on whether the mae.xval prior is > mae.xval new. -->
-<!-- ``` -->
-
-<!-- # to this point we have selected a 2 variable model for NO2: lag.1.NO2 and lag.1.SOLR.  -->
-<!-- # Next: lets create a 3 variable model -->
-
-<!-- ### NEXT START HERE ### -->
-
-
-
-
 
 
 
